--- a/templates/flex-grid.html
+++ b/templates/flex-grid.html
@@ -49,6 +49,28 @@
           <div class="grid-item">Item 6</div>
         </div>
       </section>
+      
+      <section class="section">
+  <h2>HTML Entities</h2>
+
+  <p>&amp; = toont een &amp; teken.</p>
+
+<p>&quot; = toont een " teken.</p>
+
+<p>&lt; = toont een kleiner-dan teken (&lt;).</p>
+
+<p>&gt; = toont een groter-dan teken (&gt;).</p>
+
+<p>&nbsp; = maakt een non-breaking space (harde spatie) → voorbeeld:&nbsp;&nbsp;&nbsp;drie spaties.</p>
+
+<p>&euro; = toont het euroteken (€).</p>
+
+<p>&copy; = toont het copyright-symbool (©).</p>
+
+<p>&trade; = toont het trademark-symbool (™).</p>
+
+</section>
+
 
       <!-- UITLEG MARGIN/PADDING ETC. -->
       <section class="section">
